[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "messagebox"
dynamic = ["version"]
description = "SQL Message Box"
readme = "README.rst"
requires-python= ">= 3.9"
license = { file = "LICENSE" }
authors = [
    { name= 'Todd Valentic', email='todd.valentic@gmail.com' }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "click",
    "dotenv",
    "psycopg2-binary",
    "sqlalchemy>=2",
    "texttable",
    "prefixed",
    "importlib_resources>1.3; python_version < '3.10'"
]

[project.optional-dependencies]
test = [
    'pytest',
    'pyfakefs'
    ]
devel = [
    'ruff',
    'build'
    ]

[project.urls]
homepage="https://github.com/valentic/messagebox"
repository="https://github.com/valentic/messagebox"

[project.scripts]
    mbctl = "messagebox.commands.mbctl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "messagebox.metadata.__version__"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", 
    # pyflakes
    "F", 
    # flake8-bugbear
    "B", 
    # isort
    # I"
    # flake8-simplify
    "SIM", 
    # docstyle
    "D"
]
